# vas3k.club

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-production  LICENSE  Makefile  Pipfile  README.md  cron.dockerfile  dev.dockerfile  dev.frontend.dockerfile  dev_requirements.txt  docker-compose.production.yml  docker-compose.test.yml  docker-compose.uat.yml  docker-compose.yml  dump.sql  manage.py  mypy.ini  production.dockerfile  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  vas3k_club.env.example
.github/: CODEOWNERS  dependabot.yml
.zed/: settings.json
ai/: apps.py  assistant.py  config.py  forms.py  moderation.py  openai.py  rate_limiter.py  tools.py  views.py
askbot/: admin.py  apps.py  ask_common.py  main.py  models.py  room.py
auth/: apps.py  helpers.py  models.py  tests.py
authn/: admin.py  apps.py  cache.py  exceptions.py  forms.py  helpers.py  tests.py
badges/: admin.py  apps.py  models.py  views.py
bookmarks/: api.py  apps.py  helpers.py  models.py  views.py
bot/: apps.py  bot.py  cache.py  common.py  config.py  decorators.py  main.py  test_integration.py  views.py
bot_api/: apps.py  views.py
clickers/: api.py  apps.py  models.py
club/: .env.example  asgi.py  context_processors.py  exceptions.py  features.py  middleware.py  rendering.py  serializers.py  settings.py  test_settings.py  tests.py  tests_api.py  urls.py  wsgi.py
comments/: admin.py  api.py  apps.py  forms.py  models.py  rate_limits.py  views.py
common/: api.py  dates.py  embeds.py  feature_flags.py  flat_earth.py  forms.py  images.py  models.py  pagination.py  regexp.py  request.py  url_metadata_parser.py  url_security.py  validators.py
debug/: api.py  helpers.py  tests.py  utils_for_tests.py
docs/: install_checklist.md  restore.md  setup.md  tech_guide.md  test.md
etc/: crontab
frontend/: .dockerignore  Dockerfile  babel.config.js  jest.config.js  package-lock.json  package.json  postcss.config.js  sudo  webpack-stats.json  webpack.config.js  wget-log
fun/: antics.py  apps.py  handlers.py  utils.py  views.py
(+1073 files in other folders)
