[project]
name = "vas3k-club"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "authlib==1.7.2",
    "awesome-slugify>=1.6.5",
    "beautifulsoup4>=4.14.3",
    "click>=8.4.2",
    "croniter>=6.2.4",
    "cryptography>=39.0.2",
    "django==6.0.7",
    "django-q2[sentry]==1.10.0",
    "django-redis==7.0.0",
    "django-simple-history==3.12.0",
    "django-webpack-loader==3.2.4",
    "gunicorn==26.0.0",
    "icalendar>=7.2.0",
    "joserfc>=1.7.4",
    "lxml==6.1.1",
    "mistune==3.3.3",
    "openai>=2.48.0",
    "patreon>=0.5",
    "pillow>=10.1.0",
    "premailer==3.10.0",
    "psycopg[pool]>=3.3.4",
    "pyjwt==2.13.0",
    "python-dotenv>=0.12",
    "python-telegram-bot[webhooks]==22.8",
    "redis==8.0.1",
    "requests==2.34.2",
    "sentry-sdk==2.66.0",
    "stripe==11.4.1",
    "telethon>=1.44.0",
    "typus>=0.2.2",
    "yookassa==3.11.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==7.0.0",
    "flake8>=7.3.0",
    "pytest>=9.1.1",
]
